# ardi-skill

./: Cargo.toml  README.md  SKILL.md  install.sh
.github/workflows/: release.yml
scripts/: bootstrap.sh  smoke_test.sh
src/: auth.rs  awp_register.rs  awp_rpc.rs  chain.rs  client.rs  main.rs  output.rs  rpc.rs  schema.rs  state.rs  tx.rs  wallet.rs
src/cmd/: buy_and_stake.rs  claim.rs  commit.rs  commits.rs  context.rs  gas.rs  inscribe.rs  market.rs  mod.rs  preflight.rs  repair.rs  reveal.rs  stake.rs  status.rs  transfer.rs
tools/auto-mine/: README.md  ardi-tick.sh  config.example.env  install.sh  status.sh  stop.sh  uninstall.sh
tools/auto-mine/openclaw-heartbeat-mode/: HEARTBEAT.md  README.md
tools/auto-mine/prompt/: ardi-mine-tick.md
tools/auto-mine/runtime/: claude.sh  hermes.sh  openclaw-scripted.sh
tools/auto-mine/systemd/: ardi-mine.service  ardi-mine.timer
